# krita-agent-bridge

./: .gitignore  LICENSE  PLANS.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: approve-contributor.yml  issue-gate.yml  pr-gate.yml  review-gate.yml
docs/: recipes.md  safety.md
docs/adr/: 0001-external-bridge.md
docs/guides/: comparison-pi-api.md  kra-remote-metadata-notes.md
docs/issues/: 001-project-boundary.md  002-cli-diagnostics-mvp.md  003-safety-model.md  004-krita-document-adapter.md  005-ai-diffusion-capability-adapter.md  006-comfyui-adapter.md  007-doctor-mode.md  008-e2e-smoke-workflow.md  009-agent-recipes.md
shim/: __init__.py  ai_diffusion_endpoints.py  document_ops.py  job_queue_endpoints.py  krita_api_server.py  safe_files.py
src/krita_agent_bridge/: __init__.py  ai_diffusion.py  bootstrap.py  cli.py  client.py  comfyui.py  doctor.py  e2e_smoke.py  job_monitor.py  krita_document.py  polling_policy.py  prepare.py  readiness.py  snapshot.py
tests/: test_ai_diffusion.py  test_bootstrap.py  test_cli.py  test_comfyui.py  test_e2e_smoke.py  test_e2e_smoke_runner.py  test_job_monitor.py  test_krita_document.py  test_krita_shim_zip.py  test_polling_policy.py  test_prepare.py  test_readiness.py  test_safe_files.py  test_shim_server.py  test_snapshot.py
tools/: README-branch-protection.md  __init__.py  branch-protection-backup.json  branch-protection-restore.json  build_krita_shim_zip.py  deploy_krita_shim.ps1  restore-branch-protection.ps1  run_e2e.ps1  start_krita_test_mode.ps1
