[project]
name = "krita-agent-bridge"
version = "0.1.0"
description = "External automation bridge for agent-driven Krita workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
krita-agent = "krita_agent_bridge.cli:main"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: tests that require running Krita, ComfyUI, or other local services",
]
